--- a/style.css
+++ b/style.css
@@ -1,35 +1,61 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+body {
     font-family: 'Times New Roman', Times, serif;
-    color:#fff;
-}
-body{
-    width: 100vw;
-    height: 100vh;
-    font-size: 1.5vw;
-}
-.form-ceap{
+    color: #fff;
+  }
+
+  .form-ceap {
     width: 70%;
     height: auto;
-    position: absolute;
     border-radius: 30px;
-    left: 15%;
-    top: 10%;
+    margin: 10% auto;
     padding: 15px;
-}
-.mb-3{
-    display: inline;
-    flex-direction: row;
-}
-.buttons{
-    padding: 15px;
-}
-span{
-    font-weight: bold;
-}
-@media print {
-    @page { margin: 0; }
-    body { margin: 1.6cm; }
   }
+
+  .mb-3 {
+    display: flex;
+    flex-direction: row;
+  }
+
+  .mb-3 label {
+    width: 30%;
+  }
+
+  .mb-3 input {
+    width: 70%;
+  }
+
+  .buttons {
+    padding: 15px;
+  }
+
+  span {
+    font-weight: bold;
+  }
+
+  @media print {
+    @page {
+      margin: 0;
+    }
+  
+    body {
+      margin: 1.6cm;
+    }
+  
+    /* Additional styles for removing headers and footers */
+    @page :first {
+      margin-top: 0;
+    }
+  
+    @page :left {
+      margin-left: 0;
+    }
+  
+    @page :right {
+      margin-right: 0;
+    }
+  
+    header, footer {
+      display: none;
+    }
+  }
+  
